fixed speach bubble text alignment

--- a/client/static/css/index.css
+++ b/client/static/css/index.css
@@ -116,7 +116,7 @@ body {
   }
   
   #basic-msg {
-    top: 330px;
+    bottom: 350px;
     left: 223px;
     z-index: 1;
     text-align: center;
